--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 <!DOCTYPE html>
 
@@ -12,20 +11,19 @@
 </head>
 <body>
 
-
-      <!-- Navigation -->
-    <nav>
+      
+<nav>
     <ul class="nav-links">
         <li><a href="{% url 'home' %}" class="nav-link">Home</a></li>
         <li><a href="{% url 'about' %}" class="nav-link">About</a></li>
-        
+        <li><a href="{% url 'projects' %}" class="nav-link">projects</a></li>
         <li><a href="{% url 'contact' %}" class="nav-link">Contact</a></li>
     </ul>
 </nav>
 
 
 
-       <!-- About Section -->
+       
     <section id="about">
         <div class="section-container">
         
@@ -48,28 +46,37 @@
     </section>
 
     <section id="about">
-    <div class="section-container">
+    
+        <div class="section-container">
         <div class="about-content">
             <h2 class="cert-title">Certifications</h2>
             
             <div class="cert-grid">
                 <div class="cert-card">
-                    <h3>Python for Everybody</h3>
-                    <p>University of Michigan · Coursera</p>
+                    <h3>Neo4j Fundamentals</h3>
+                    <p><a href = 'https://graphacademy.neo4j.com/c/5c34f933-9789-4aaa-88ef-9861a1c991e0/'>View</p>
                 </div>
                 <div class="cert-card">
-                    <h3>Java Programming</h3>
-                    <p>Udemy</p>
+                    <h3>Python For Beginners Course In-Depth</h3>
+                    <p><a href = 'https://drive.google.com/file/d/159IJ1a0uGYpovCagQti5nT5ZEZzYENBT/view?usp=sharing'>View</p>
                 </div>
                 <div class="cert-card">
-                    <h3>Machine Learning Basics</h3>
-                    <p>Google · Coursera</p>
+                    <h3>AI for Business Professionals</h3>
+                    <p><a href = 'https://www.life-global.org/certificate/923ec59e-7001-49e6-a80e-eba7d3a7263e'>View</p>
                 </div>
                 <div class="cert-card">
-                    <h3>Web Development</h3>
-                    <p>FreeCodeCamp</p>
+                    <h3>PMaster adobe illustrator</h3>
+                    <p><a href = 'https://www.linkedin.com/in/yuthilabanuka/details/certifications/1721490663990/single-media-viewer?type=DOCUMENT&profileId=ACoAADcZok8BEsDM-kHY1XEm-rnhxXgIS03V6qA&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3Bad32sxNsT4yhoVsfhyo%2BcQ%3D%3D'>View</p>
                 </div>
-                <!-- Add more certifications here -->
+                <div class="cert-card">
+                    <h3>Responsive Web Design</h3>
+                    <p><a href = 'https://freecodecamp.org/certification/fcc90f6ca47-7c78-4f32-bbd3-27a8f58b8c31/responsive-web-design'>View</p>
+                </div>
+                <div class="cert-card">
+                    <h3> Srilankan Computer Competency Licence</h3>
+                    <p><a href = 'https://www.linkedin.com/in/yuthilabanuka/details/certifications/1721491008627/single-media-viewer?type=DOCUMENT&profileId=ACoAADcZok8BEsDM-kHY1XEm-rnhxXgIS03V6qA&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3Bx68mtNRXRdGxZLyrOAhdtg%3D%3D'>View</p>
+                </div>
+                
             </div>
         </div>
     </div>
