--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
     <ul class="nav-links">
         <li><a href="{% url 'home' %}" class="nav-link">Home</a></li>
         <li><a href="{% url 'about' %}" class="nav-link">About</a></li>
-        
+        <li><a href="{% url 'projects' %}" class="nav-link">projects</a></li>
         <li><a href="{% url 'contact' %}" class="nav-link">Contact</a></li>
     </ul>
 </nav>
